2006-04-03  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-pixmap.c (sapwood_pixmap_render_rects): Use clip mask
	only if one was drawn using the tile masks from theme.
	* src/sapwood-server.c (extract_pixmap_single): Create masks only for
	pixbufs with alpha.

2006-04-03  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (draw_simple_image, get_window_for_shape): Use
	flag from gtkrc to figure out need for shape mask.
	* src/sapwood-rc-style.c (theme_symbols, theme_parse_shaped,
	theme_parse_image): Add 'shaped' (default=FALSE) token to explicitly
	enable support for shaped windows from gtkrc.
	* src/theme-pixbuf.h (ThemeImage): Trade one bit from 'refcount' to
	hold the value for TOKEN_SHAPED (replaces unused TOKEN_RECOLORABLE) in
	'background_shaped' member.

2006-04-03  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (get_window_for_shape, draw_simple_image):
	Refactor shape mask requirement logic into separate function.

2005-09-02  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 1.36 ===

	* configure.in
	* NEWS: Updated

2005-09-02  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* src/theme-pixbuf.h: restore TOKEN_RECOLORABLE for not to invalidate
	gtkrc cache files

2005-09-02  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* src/theme-pixbuf.h(struct _ThemePixbuf, struct _ThemeMatchData):
	reorder and turn various members into bitfiels and save another 12k.

2005-09-02  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* src/theme-pixbuf.h(struct _ThemePixbuf)
	* src/sapwood-render.c(theme_pixbuf_copy, theme_pixbuf_hash,
	theme_pixbuf_equal, theme_pixbuf_set_filename,
	pixmap_cache_value_new): split (absolute) filename to dirname and
	basename, keep only canonicalized copy in memory and reconstruct the
	absolute filename when needed.  Saves roughly 21k (out of 43k) memory.
	N#16158

2005-09-02  Tommi Komulainen  <tommi.komulainen@nokia.com>
