@@ -2,5 +2,6 @@ SUBDIRS = src
 
 EXTRA_DIST = NEWS.pixbuf
 
-MAINTAINERCLEANFILES = Makefile.in aclocal.m4 config.guess config.sub \
-		       configure install-sh ltmain.sh missing mkinstalldirs
+MAINTAINERCLEANFILES = Makefile.in aclocal.m4 compile config.guess config.sub \
+		       configure depcomp install-sh ltmain.sh missing \
+		       mkinstalldirs
